--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.8.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
+    "json-rpc-2.0": "^0.2.18",
     "protocol": "file:../protocol",
+    "socket.io": "^4.1.3",
     "typescript": "^4.4.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.12",
+    "ts-node": "^10.2.1"
   }
 }
