--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -15,14 +15,21 @@
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
     "json-rpc-2.0": "^0.2.18",
+    "lodash": "^4.17.21",
     "protocol": "file:../protocol",
     "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.12",
+    "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.172",
+    "@types/socket.io-client": "^3.0.0",
+    "jest": "^27.1.0",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1"
   }
 }
