--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "canvas": "^2.8.0",
     "cors": "^2.8.5",
+    "exec-sh": "^0.4.0",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
     "json-rpc-2.0": "^0.2.18",
