--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./src/index.ts",
+    "start": "nodemon ./src/index.ts",
     "test": "jest"
   },
   "author": "",
@@ -30,6 +30,7 @@
     "@types/lodash": "^4.14.172",
     "@types/socket.io-client": "^3.0.0",
     "jest": "^27.1.0",
+    "nodemon": "^2.0.12",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1"
   }
