--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.9",
     "d3-hierarchy": "^3.0.1",
     "javascript-state-machine": "^3.1.0",
+    "json-rpc-2.0": "^0.2.18",
     "micromodal": "^0.4.6",
     "pixi-viewport": "^4.32.0",
     "pixi.js": "^6.1.2",
@@ -20,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.26.2",
+    "socket.io-client": "^4.1.3",
     "spin.js": "^4.1.0",
     "toastr": "^2.1.4",
     "typescript": "^4.4.2",
