--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/icons": "^5.0.0-beta.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -13,6 +17,7 @@
     "d3-hierarchy": "^3.0.1",
     "javascript-state-machine": "^3.1.0",
     "json-rpc-2.0": "^0.2.18",
+    "lodash": "^4.17.21",
     "micromodal": "^0.4.6",
     "pixi-viewport": "^4.32.0",
     "pixi.js": "^6.1.2",
@@ -50,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.172"
   }
 }
