--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.5",
     "@material-ui/icons": "^5.0.0-beta.5",
+    "@monaco-editor/react": "^4.2.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,17 +15,21 @@
     "@types/node": "^12.20.21",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "css-element-queries": "^1.2.3",
     "d3-hierarchy": "^3.0.1",
     "javascript-state-machine": "^3.1.0",
     "json-rpc-2.0": "^0.2.18",
     "lodash": "^4.17.21",
+    "material-ui-popup-state": "^1.9.3",
     "micromodal": "^0.4.6",
+    "monaco-editor": "^0.27.0",
     "pixi-viewport": "^4.32.0",
     "pixi.js": "^6.1.2",
     "protocol": "file:../protocol",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-virtualized": "^9.22.3",
     "sass": "^1.26.2",
     "socket.io-client": "^4.1.3",
     "spin.js": "^4.1.0",
@@ -57,6 +62,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.172"
+    "@types/lodash": "^4.14.172",
+    "@types/react-virtualized": "^9.21.13"
   }
 }
