--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "pixi.js": "^6.1.2",
     "protocol": "file:../protocol",
     "react": "^17.0.2",
+    "react-async-hook": "^3.6.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-virtualized": "^9.22.3",
