--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react": "^17.0.2",
     "react-async-hook": "^3.6.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
     "react-virtualized": "^9.22.3",
     "sass": "^1.26.2",
