--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/standalone": "^7.15.4",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@inlet/react-pixi": "^6.6.5",
@@ -20,6 +21,7 @@
     "css-element-queries": "^1.2.3",
     "d3-hierarchy": "^3.0.1",
     "javascript-state-machine": "^3.1.0",
+    "js-interpreter": "^2.3.1",
     "json-rpc-2.0": "^0.2.18",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^1.9.3",
@@ -34,6 +36,7 @@
     "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
     "react-virtualized": "^9.22.3",
+    "react-window": "^1.8.6",
     "sass": "^1.26.2",
     "socket.io-client": "^4.1.3",
     "spin.js": "^4.1.0",
@@ -66,7 +69,9 @@
     ]
   },
   "devDependencies": {
+    "@types/babel__standalone": "^7.1.3",
     "@types/lodash": "^4.14.172",
-    "@types/react-virtualized": "^9.21.13"
+    "@types/react-virtualized": "^9.21.13",
+    "@types/react-window": "^1.8.5"
   }
 }
