--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^1.9.3",
     "monaco-editor": "^0.27.0",
+    "nanoid": "^3.1.25",
     "pixi-viewport": "^4.32.0",
     "pixi.js": "^6.1.2",
     "protocol": "file:../protocol",
