--- a/client/package.json
+++ b/client/package.json
@@ -68,6 +68,7 @@
     "@types/babel__standalone": "^7.1.3",
     "@types/lodash": "^4.14.172",
     "@types/react-virtualized": "^9.21.13",
-    "@types/react-window": "^1.8.5"
+    "@types/react-window": "^1.8.5",
+    "serve": "^12.0.1"
   }
 }
