--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
+    "react-use": "^17.3.1",
     "react-virtualized": "^9.22.3",
     "react-window": "^1.8.6",
     "socket.io-client": "^4.1.3",
