--- a/client/package.json
+++ b/client/package.json
@@ -45,7 +45,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gh-pages": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -71,5 +72,6 @@
     "@types/react-virtualized": "^9.21.13",
     "@types/react-window": "^1.8.5",
     "serve": "^12.0.1"
-  }
+  },
+  "homepage": "."
 }
