--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "exec-sh": "^0.4.0",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
+    "glob-promise": "^4.2.0",
     "json-rpc-2.0": "^0.2.18",
     "lodash": "^4.17.21",
     "protocol": "file:../protocol",
