--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/Pathfinding-Project/app/issues"
   },
-  "homepage": "https://github.com/Pathfinding-Project/app#readme",
+  "homepage": "https://pathfinding-project.github.io/app",
   "devDependencies": {
     "concurrently": "^6.2.1",
     "gh-pages": "^3.2.3"
