--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "glob-promise": "^4.2.0",
     "json-rpc-2.0": "^0.2.18",
     "lodash": "^4.17.21",
+    "pathfinding-binaries": "github:Pathfinding-Project/pathfinding#binaries",
     "protocol": "file:../protocol",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
@@ -28,7 +29,7 @@
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.12",
     "@types/jest": "^27.0.1",
-    "@types/lodash": "^4.14.172",
+    "@types/lodash": "^4.14.173",
     "@types/socket.io-client": "^3.0.0",
     "jest": "^27.1.0",
     "nodemon": "^2.0.12",
