--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "module": "main.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "start": "nodemon --watch . --watch src --exec \"node --experimental-specifier-resolution=node --loader ts-node/esm\" src/index.ts",
     "test": "jest"
   },
   "author": "",
@@ -17,11 +18,13 @@
     "fs-extra": "^10.0.0",
     "glob-promise": "^4.2.0",
     "json-rpc-2.0": "^0.2.18",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "pathfinding-binaries": "github:Pathfinding-Project/pathfinding#binaries",
     "protocol": "file:../protocol",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
+    "tempy": "^2.0.0",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
@@ -29,11 +32,11 @@
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.12",
     "@types/jest": "^27.0.1",
-    "@types/lodash": "^4.14.173",
+    "@types/lodash-es": "^4.17.5",
     "@types/socket.io-client": "^3.0.0",
     "jest": "^27.1.0",
     "nodemon": "^2.0.12",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1"
-  }
+    "ts-jest": "^27.0.5"
+  },
+  "type": "module"
 }
