--- a/client/package.json
+++ b/client/package.json
@@ -35,8 +35,8 @@
     "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
     "react-use": "^17.3.1",
-    "react-virtualized": "^9.22.3",
-    "react-window": "^1.8.6",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-virtuoso": "^2.2.1",
     "socket.io-client": "^4.1.3",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
@@ -68,8 +68,7 @@
   "devDependencies": {
     "@types/babel__standalone": "^7.1.3",
     "@types/lodash": "^4.14.172",
-    "@types/react-virtualized": "^9.21.13",
-    "@types/react-window": "^1.8.5",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
     "serve": "^12.0.1"
   },
   "homepage": "."
