--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "cd server && node --experimental-specifier-resolution=node --loader ts-node/esm/transpile-only src/index.ts",
     "start:all": "concurrently \"cd client && npx --yes serve -s build\" \"cd server && ts-node src/index.ts\"",
     "build:all": "cd client && npm run build",
-    "deploy:all": "gh-pages -d client/build",
     "postinstall": "concurrently \"cd client && npm i\" \"cd server && npm i\""
   },
   "repository": {
@@ -21,8 +20,7 @@
   },
   "homepage": "https://pathfinding-project.github.io/app",
   "devDependencies": {
-    "concurrently": "^6.2.1",
-    "gh-pages": "^3.2.3"
+    "concurrently": "^6.2.1"
   },
   "dependencies": {
     "ts-node": "^10.2.1",
