--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build -r https://github.com/Pathfinding-Project/app"
   },
   "eslintConfig": {
     "extends": [
