Add map caching support

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lru-cache": "^5.1.1",
     "canvas": "^2.8.0",
     "cors": "^2.8.5",
     "exec-sh": "^0.4.0",
@@ -20,6 +21,8 @@
     "glob-promise": "^4.2.0",
     "json-rpc-2.0": "^0.2.18",
     "lodash-es": "^4.17.21",
+    "lru-cache": "^6.0.0",
+    "md5": "^2.3.0",
     "pathfinding-binaries": "github:Pathfinding-Project/pathfinding#binaries",
     "protocol": "file:../protocol",
     "socket.io": "^4.1.3",
@@ -34,6 +37,7 @@
     "@types/fs-extra": "^9.0.12",
     "@types/jest": "^27.0.1",
     "@types/lodash-es": "^4.17.5",
+    "@types/md5": "^2.3.1",
     "@types/socket.io-client": "^3.0.0",
     "jest": "^27.1.0",
     "nodemon": "^2.0.12",
