--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "json-rpc-2.0": "^0.2.18",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^1.9.3",
+    "md5": "^2.3.0",
     "monaco-editor": "^0.27.0",
     "nanoid": "^3.1.25",
     "pixi-viewport": "^4.32.0",
@@ -69,6 +70,7 @@
   "devDependencies": {
     "@types/babel__standalone": "^7.1.3",
     "@types/lodash": "^4.14.172",
+    "@types/md5": "^2.3.1",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "gh-pages": "^3.2.3",
     "serve": "^12.0.1"
