Visual changes to wall nodes

--- a/client/package.json
+++ b/client/package.json
@@ -75,5 +75,5 @@
     "gh-pages": "^3.2.3",
     "serve": "^12.0.1"
   },
-  "homepage": "https://pathfinding-project.github.io/app"
+  "homepage": "."
 }
