--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,10 +28,8 @@ jobs:
         with:
           # Name of the Docker image
           image: server
-          # Tags override for Docker image
-          tags: rachmaninoff.duckdns.org:8001/server
           # Target Docker registry
-          registry: http://rachmaninoff.duckdns.org:8001/
+          registry: http://rachmaninoff.duckdns.org:8001
           # Location of Dockerfile, if not Dockerfile in root directory
           dockerfile: server/Dockerfile
           # Directory to run `docker build` from, if not project root
