--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,7 +29,7 @@ jobs:
           # Name of the Docker image
           image: server
           # Target Docker registry
-          registry: http://rachmaninoff.duckdns.org:8001
+          registry: rachmaninoff.duckdns.org:8001
           # Location of Dockerfile, if not Dockerfile in root directory
           dockerfile: server/Dockerfile
           # Directory to run `docker build` from, if not project root
