--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/standalone": "^7.15.4",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@inlet/react-pixi": "^6.6.5",
@@ -25,6 +24,7 @@
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^1.9.3",
     "md5": "^2.3.0",
+    "memoizee": "^0.4.15",
     "monaco-editor": "^0.27.0",
     "nanoid": "^3.1.25",
     "pixi-viewport": "^4.32.0",
@@ -68,9 +68,9 @@
     ]
   },
   "devDependencies": {
-    "@types/babel__standalone": "^7.1.3",
     "@types/lodash": "^4.14.172",
     "@types/md5": "^2.3.1",
+    "@types/memoizee": "^0.4.6",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "gh-pages": "^3.2.3",
     "serve": "^12.0.1"
