Remove unused client dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,6 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "css-element-queries": "^1.2.3",
-    "d3-hierarchy": "^3.0.1",
-    "js-interpreter": "^2.3.1",
     "json-rpc-2.0": "^0.2.18",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^1.9.3",
@@ -33,7 +31,6 @@
     "react": "^17.0.2",
     "react-async-hook": "^3.6.2",
     "react-dom": "^17.0.2",
-    "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
     "react-use": "^17.3.1",
     "react-virtualized-auto-sizer": "^1.0.6",
@@ -70,9 +67,7 @@
     "@types/lodash": "^4.14.172",
     "@types/md5": "^2.3.1",
     "@types/memoizee": "^0.4.6",
-    "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "gh-pages": "^3.2.3",
-    "serve": "^12.0.1"
+    "@types/react-virtualized-auto-sizer": "^1.0.1"
   },
   "homepage": "."
 }
