--- a/client/package.json
+++ b/client/package.json
@@ -40,9 +40,9 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -67,7 +67,10 @@
     "@types/lodash": "^4.14.172",
     "@types/md5": "^2.3.1",
     "@types/memoizee": "^0.4.6",
-    "@types/react-virtualized-auto-sizer": "^1.0.1"
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "craco": "^0.0.3",
+    "craco-esbuild": "^0.4.2",
+    "craco-swc": "^0.1.3"
   },
   "homepage": "."
 }
