--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "scripts": {
     "start:dev": "concurrently \"cd client && npm start\" \"cd server && npm start\"",
-    "start": "cd server && node --experimental-specifier-resolution=node --loader ts-node/esm/transpile-only src/index.ts",
-    "start:all": "concurrently \"cd client && npx --yes serve -s build\" \"cd server && ts-node src/index.ts\"",
+    "start": "concurrently \"cd client && npx --yes serve -s build\" \"cd server && ts-node src/index.ts\"",
     "build:all": "cd client && npm run build",
     "postinstall": "concurrently \"cd client && npm i\" \"cd server && npm i\""
   },
