--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start:dev": "concurrently \"cd client && npm start\" \"cd server && npm start\"",
-    "start": "concurrently \"cd client && npx --yes serve -s build\" \"cd server && ts-node src/index.ts\"",
+    "start": "concurrently \"cd client && npm start\" \"cd server && npm start\"",
     "build:all": "cd client && npm run build",
     "postinstall": "concurrently \"cd client && npm i\" \"cd server && npm i\""
   },
