--- a/client/package.json
+++ b/client/package.json
@@ -64,11 +64,11 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.4.0",
     "@types/lodash": "^4.14.172",
     "@types/md5": "^2.3.1",
     "@types/memoizee": "^0.4.6",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "craco": "^0.0.3",
     "craco-esbuild": "^0.4.2",
     "craco-swc": "^0.1.3"
   },
