--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,9 +9,7 @@ RUN npm i
 
 COPY . .
 
-RUN ["chmod", "-R", "777", "."]
-
 ENV PORT=80
 EXPOSE 80
 
-CMD ["node", "--experimental-specifier-resolution=node", "--loader", "ts-node/esm/transpile-only", "src/index.ts" ]
+CMD ["node", "-r", "ts-node/register/transpile-only", "src/index.ts" ]
