--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "module": "main.js",
   "scripts": {
-    "start": "nodemon --watch . --watch src --exec \"node --experimental-specifier-resolution=node --loader ts-node/esm\" src/index.ts",
+    "start": "nodemon --watch . --watch src --exec \"ts-node\" src/index.ts",
     "test": "jest",
     "build:docker": "docker build . -t server"
   },
@@ -16,14 +15,14 @@
     "express": "^4.17.1",
     "glob-promise": "^4.2.0",
     "json-rpc-2.0": "^0.2.18",
-    "lodash-es": "^4.17.21",
+    "lodash": "^4.17.21",
     "lru-cache": "^6.0.0",
     "md5": "^2.3.0",
     "pathfinding-binaries": "github:path-visualiser/pathfinding#binaries",
     "protocol": "file:../protocol",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
-    "tempy": "^2.0.0",
+    "tempy": "^1.0.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
@@ -37,6 +36,5 @@
     "jest": "^27.1.0",
     "nodemon": "^2.0.12",
     "ts-jest": "^27.0.5"
-  },
-  "type": "module"
+  }
 }
