--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "css-element-queries": "^1.2.3",
+    "file-select-dialog": "^1.5.4",
     "json-rpc-2.0": "^0.2.18",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^1.9.3",
