--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "concurrently \"cd client && npm start\" \"cd server && npm start\"",
     "build:all": "cd client && npm run build",
-    "postinstall": "concurrently \"cd client && npm i\" \"cd server && npm i\"",
-    "test": "(cd client && npm run test -- --watchAll=false) && (cd server && npm run test)"
+    "test": "(cd client && npm run test -- --watchAll=false) && (cd server && npm run test)",
+    "postinstall": "concurrently \"cd client && npm i\" \"cd server && npm i\""
   },
   "repository": {
     "type": "git",
