--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^12.20.21",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "craco-worker-loader": "^1.0.0",
     "css-element-queries": "^1.2.3",
     "file-select-dialog": "^1.5.4",
     "json-rpc-2.0": "^0.2.18",
@@ -38,7 +39,8 @@
     "react-virtuoso": "^2.2.1",
     "socket.io-client": "^4.1.3",
     "typescript": "^4.4.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "craco start",
