--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-virtuoso": "^2.2.1",
     "socket.io-client": "^4.1.3",
     "typescript": "^4.4.2",
+    "url-parse": "^1.5.3",
     "web-vitals": "^1.1.2",
     "worker-loader": "^3.0.8"
   },
@@ -72,6 +73,7 @@
     "@types/md5": "^2.3.1",
     "@types/memoizee": "^0.4.6",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/url-parse": "^1.4.5",
     "craco-esbuild": "^0.4.2",
     "craco-swc": "^0.1.3"
   },
