--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^17.0.9",
     "craco-worker-loader": "^1.0.0",
     "css-element-queries": "^1.2.3",
+    "detect-collisions": "^3.1.1",
     "downloadjs": "^1.4.7",
     "file-select-dialog": "^1.5.4",
     "json-beautify": "^1.1.1",
