Configure new docker workflow that uses ghcr

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,7 +31,7 @@ jobs:
           # Tags override for Docker image
           tags: latest
           # Target Docker registry
-          registry: ghcr.io/path-visualiser/server
+          registry: ghcr.io/path-visualiser
           # Location of Dockerfile, if not Dockerfile in root directory
           dockerfile: server/Dockerfile
           # Directory to run `docker build` from, if not project root
