--- a/adapter/package.json
+++ b/adapter/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "server",
+  "name": "adapter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch . --watch src --exec \"ts-node\" src/index.ts",
-    "test": "jest",
-    "build:docker": "docker build . -t server"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adapter": "^1.0.0-beta.10",
+    "esbuild": "^0.14.49",
     "exec-sh": "^0.4.0",
     "express": "^4.17.1",
-    "glob-promise": "^4.2.0",
     "json-rpc-2.0": "^0.2.18",
     "lodash": "^4.17.21",
-    "lru-cache": "^6.0.0",
-    "md5": "^2.3.0",
     "pathfinding-binaries": "github:path-visualiser/pathfinding#binaries",
     "protocol": "file:../protocol",
     "socket.io": "^4.1.3",
@@ -34,7 +31,6 @@
     "@types/md5": "^2.3.1",
     "@types/socket.io-client": "^3.0.0",
     "jest": "^27.1.0",
-    "nodemon": "^2.0.12",
     "ts-jest": "^27.0.5"
   }
 }
