--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,7 @@
     "worker-loader": "^3.0.8"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "craco --openssl-legacy-provider start",
     "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
