--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "concurrently \"cd client && npm start\" \"cd server && npm start\"",
     "build:all": "cd client && npm run build",
-    "test": "(cd client && npm run test -- --watchAll=false) && (cd server && npm run test)",
+    "test": "cd client && npm run test -- --watchAll=false",
     "postinstall": "concurrently \"cd client && npm i\" \"cd server && npm i\""
   },
   "repository": {
