--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,20 @@
     "@material-ui/icons": "^5.0.0-beta.5",
     "@material-ui/lab": "^5.0.0-alpha.44",
     "@monaco-editor/react": "^4.2.2",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.21",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "babel-jest": "^29.3.1",
     "craco-worker-loader": "^1.0.0",
     "css-element-queries": "^1.2.3",
     "detect-collisions": "^3.1.1",
     "downloadjs": "^1.4.7",
     "file-select-dialog": "^1.5.4",
+    "jest": "^29.3.1",
     "json-beautify": "^1.1.1",
     "json-rpc-2.0": "^0.2.18",
     "lodash": "^4.17.21",
@@ -29,7 +31,7 @@
     "md5": "^2.3.0",
     "memoizee": "^0.4.15",
     "monaco-editor": "^0.27.0",
-    "nanoid": "^3.1.25",
+    "nanoid": "^3.3.4",
     "pixi-viewport": "^4.32.0",
     "pixi.js": "^6.1.2",
     "protocol": "file:../protocol",
@@ -41,15 +43,16 @@
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-virtuoso": "^2.2.1",
     "socket.io-client": "^4.1.3",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.4.2",
-    "url-parse": "^1.5.3",
+    "url-parse": "^1.5.10",
     "web-vitals": "^1.1.2",
     "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "craco --openssl-legacy-provider start",
     "build": "craco build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
