--- a/client/package.json
+++ b/client/package.json
@@ -52,7 +52,7 @@
   "scripts": {
     "start": "craco --openssl-legacy-provider start",
     "build": "craco build",
-    "test": "jest",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
