--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,10 @@
     "@types/node": "^12.20.21",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "babel-jest": "^29.3.1",
-    "craco-worker-loader": "^1.0.0",
     "css-element-queries": "^1.2.3",
     "detect-collisions": "^3.1.1",
     "downloadjs": "^1.4.7",
     "file-select-dialog": "^1.5.4",
-    "jest": "^29.3.1",
     "json-beautify": "^1.1.1",
     "json-rpc-2.0": "^0.2.18",
     "lodash": "^4.17.21",
@@ -38,20 +35,19 @@
     "react": "^17.0.2",
     "react-async-hook": "^3.6.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-use": "^17.3.1",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-virtuoso": "^2.2.1",
     "socket.io-client": "^4.1.3",
-    "ts-jest": "^29.0.3",
     "typescript": "^4.4.2",
     "url-parse": "^1.5.10",
     "web-vitals": "^1.1.2",
     "worker-loader": "^3.0.8"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -74,15 +70,12 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.0",
     "@types/downloadjs": "^1.4.2",
     "@types/lodash": "^4.14.172",
     "@types/md5": "^2.3.1",
     "@types/memoizee": "^0.4.6",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "@types/url-parse": "^1.4.5",
-    "craco-esbuild": "^0.4.2",
-    "craco-swc": "^0.1.3"
+    "@types/url-parse": "^1.4.5"
   },
   "homepage": "."
 }
