--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,14 @@
     "@material-ui/icons": "^5.0.0-beta.5",
     "@material-ui/lab": "^5.0.0-alpha.44",
     "@monaco-editor/react": "^4.2.2",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.21",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "craco-worker-loader": "^1.0.0",
     "css-element-queries": "^1.2.3",
     "detect-collisions": "^3.1.1",
     "downloadjs": "^1.4.7",
@@ -28,26 +29,26 @@
     "md5": "^2.3.0",
     "memoizee": "^0.4.15",
     "monaco-editor": "^0.27.0",
-    "nanoid": "^3.3.4",
+    "nanoid": "^3.1.25",
     "pixi-viewport": "^4.32.0",
     "pixi.js": "^6.1.2",
     "protocol": "file:../protocol",
     "react": "^17.0.2",
     "react-async-hook": "^3.6.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "4.0.3",
     "react-use": "^17.3.1",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-virtuoso": "^2.2.1",
     "socket.io-client": "^4.1.3",
     "typescript": "^4.4.2",
-    "url-parse": "^1.5.10",
+    "url-parse": "^1.5.3",
     "web-vitals": "^1.1.2",
     "worker-loader": "^3.0.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start",
+    "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -70,12 +71,15 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.4.0",
     "@types/downloadjs": "^1.4.2",
     "@types/lodash": "^4.14.172",
     "@types/md5": "^2.3.1",
     "@types/memoizee": "^0.4.6",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "@types/url-parse": "^1.4.5"
+    "@types/url-parse": "^1.4.5",
+    "craco-esbuild": "^0.4.2",
+    "craco-swc": "^0.1.3"
   },
   "homepage": "."
 }
