--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -17,7 +18,6 @@
     "@types/node": "^12.20.21",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "craco-worker-loader": "^1.0.0",
     "css-element-queries": "^1.2.3",
     "detect-collisions": "^3.1.1",
     "downloadjs": "^1.4.7",
@@ -47,8 +47,8 @@
     "worker-loader": "^3.0.8"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -71,15 +71,12 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.0",
     "@types/downloadjs": "^1.4.2",
     "@types/lodash": "^4.14.172",
     "@types/md5": "^2.3.1",
     "@types/memoizee": "^0.4.6",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "@types/url-parse": "^1.4.5",
-    "craco-esbuild": "^0.4.2",
-    "craco-swc": "^0.1.3"
+    "@types/url-parse": "^1.4.5"
   },
   "homepage": "."
 }
