--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,7 @@
     "@material-ui/icons": "^5.0.0-beta.5",
     "@material-ui/lab": "^5.0.0-alpha.44",
     "@monaco-editor/react": "^4.2.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.21",
+    "@types/node": "^18.13.0",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "css-element-queries": "^1.2.3",
@@ -36,10 +32,10 @@
     "react": "^17.0.2",
     "react-async-hook": "^3.6.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "react-use": "^17.3.1",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-virtuoso": "^2.2.1",
+    "rollup-plugin-web-worker-loader": "^1.6.1",
     "socket.io-client": "^4.1.3",
     "typescript": "^4.4.2",
     "url-parse": "^1.5.3",
@@ -47,15 +43,12 @@
     "worker-loader": "^3.0.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -76,7 +69,12 @@
     "@types/md5": "^2.3.1",
     "@types/memoizee": "^0.4.6",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "@types/url-parse": "^1.4.5"
+    "@types/url-parse": "^1.4.5",
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.1.1",
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.5"
   },
   "homepage": "."
 }
