--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "concurrently": "^6.2.1"
   },
   "dependencies": {
+    "immer": "^9.0.19",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "use-immer": "^0.8.1"
   }
 }
