--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "css-element-queries": "^1.2.3",
+    "d3-hierarchy": "^3.1.2",
     "detect-collisions": "^3.1.1",
     "downloadjs": "^1.4.7",
     "file-select-dialog": "^1.5.4",
@@ -64,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "@types/d3-hierarchy": "^3.1.2",
     "@types/downloadjs": "^1.4.2",
     "@types/lodash": "^4.14.172",
     "@types/md5": "^2.3.1",
