--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "concurrently": "^6.2.1"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "immer": "^9.0.19",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2",
