fix popup overlay bug, add path and guide lines

--- a/client/package.json
+++ b/client/package.json
@@ -44,7 +44,7 @@
     "worker-loader": "^3.0.8"
   },
   "scripts": {
-    "start": "vite",
+    "start": "vite --host",
     "build": "tsc && vite build",
     "forcebuild": "vite build"
   },
