--- a/adapter/package.json
+++ b/adapter/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "vitest run"
   },
   "author": "",
   "license": "ISC",
@@ -25,12 +25,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.1",
     "@types/lodash-es": "^4.17.5",
     "@types/lru-cache": "^5.1.1",
     "@types/md5": "^2.3.1",
     "@types/socket.io-client": "^3.0.0",
-    "jest": "^27.1.0",
-    "ts-jest": "^27.0.5"
+    "vitest": "^0.29.8"
   }
 }
