--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,5 +19,5 @@
     "baseUrl": "src",
     "downlevelIteration": true
   },
-  "include": ["src"]
+  "include": ["src", "src/components/app-bar/Title.test.tsx"]
 }
