--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "scripts": {
     "start": "concurrently \"cd client && npm start\" \"cd server && npm start\"",
+    "test": "concurrently \"cd client && npm test\" \"cd server && npm test\" \"cd adapter && npm test\"",
     "build:all": "cd client && npm run build",
-    "test": "cd client && npm run test -- --watchAll=false",
     "postinstall": "concurrently \"cd client && npm i\" \"cd server && npm i\""
   },
   "repository": {
@@ -19,7 +19,8 @@
   },
   "homepage": "https://path-visualiser.github.io/app",
   "devDependencies": {
-    "concurrently": "^6.2.1"
+    "concurrently": "^6.2.1",
+    "vitest": "^0.29.8"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -27,5 +28,6 @@
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2",
     "use-immer": "^0.8.1"
-  }
+  },
+  "type": "module"
 }
