--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --watch . --watch src --exec \"ts-node\" src/index.ts",
-    "test": "jest",
+    "test": "vitest run",
     "build:docker": "docker build . -t server"
   },
   "author": "",
@@ -28,13 +28,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.1",
     "@types/lodash-es": "^4.17.5",
     "@types/lru-cache": "^5.1.1",
     "@types/md5": "^2.3.1",
     "@types/socket.io-client": "^3.0.0",
-    "jest": "^27.1.0",
     "nodemon": "^2.0.12",
-    "ts-jest": "^27.0.5"
+    "vitest": "^0.29.8"
   }
 }
