--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react": "^18.2.0",
     "react-async-hook": "^3.6.2",
     "react-dom": "^18.2.0",
+    "react-multi-split-pane": "^0.3.3",
     "react-use": "^17.3.1",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-virtuoso": "^2.2.1",
