--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,10 @@ name: Deploy to GitHub Pages
 on: [push]
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       CI: false
+      NODE_OPTIONS: "--openssl-legacy-provider"
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.1
