--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.21",
+    "@types/node": "^12.20.55",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@vitejs/plugin-react": "^3.1.0",
     "craco-worker-loader": "^1.0.0",
     "css-element-queries": "^1.2.3",
     "detect-collisions": "^3.1.1",
@@ -36,19 +37,20 @@
     "react": "^17.0.2",
     "react-async-hook": "^3.6.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^2.1.3",
     "react-use": "^17.3.1",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-virtuoso": "^2.2.1",
     "socket.io-client": "^4.1.3",
     "typescript": "^4.4.2",
     "url-parse": "^1.5.3",
+    "vite": "^4.2.2",
     "web-vitals": "^1.1.2",
     "worker-loader": "^3.0.8"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "vite",
+    "build": "vite build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -78,7 +80,7 @@
     "@types/memoizee": "^0.4.6",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/url-parse": "^1.4.5",
-    "craco-esbuild": "^0.4.2",
+    "craco-esbuild": "^0.5.2",
     "craco-swc": "^0.1.3"
   },
   "homepage": "."
