Significant changes to UI

--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,8 @@
     "memoizee": "^0.4.15",
     "monaco-editor": "^0.39.0",
     "nanoid": "^3.1.25",
+    "overlayscrollbars": "^2.2.1",
+    "overlayscrollbars-react": "^0.5.1",
     "pixi-viewport": "^4.32.0",
     "pixi.js": "^6.1.2",
     "protocol": "file:../protocol",
@@ -37,6 +39,7 @@
     "react-async-hook": "^3.6.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-slot-component": "^2.0.3",
     "react-use": "^17.4.0",
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-virtuoso": "^2.2.1",
@@ -75,6 +78,7 @@
     "@types/md5": "^2.3.1",
     "@types/memoizee": "^0.4.6",
     "@types/react": "^18.2.14",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^17.0.9",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/url-parse": "^1.4.5",
