--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -1,10 +1,10 @@
 {
-  "short_name": "Path Visualiser",
-  "name": "Path Search Visualiser",
+  "short_name": "Waypoint",
+  "name": "Waypoint",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "favicon.png",
+      "sizes": "512x512",
       "type": "image/x-icon"
     },
     {
