--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,10 @@
     "@mui/material": "^5.13.7",
     "@mui/system": "^5.13.7",
     "@pixi/react": "^7.1.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@uidotdev/usehooks": "^2.2.0",
     "css-element-queries": "^1.2.3",
+    "deep-diff": "^1.0.2",
+    "deep-object-diff": "^1.1.9",
     "detect-collisions": "^3.1.1",
     "downloadjs": "^1.4.7",
     "file-select-dialog": "^1.5.4",
@@ -32,12 +31,15 @@
     "nanoid": "^3.1.25",
     "overlayscrollbars": "^2.2.1",
     "overlayscrollbars-react": "^0.5.1",
-    "pixi-viewport": "^4.32.0",
-    "pixi.js": "^6.1.2",
+    "performant-array-to-tree": "^1.11.0",
+    "pixi-viewport": "^5.0.2",
+    "pixi.js": "^7.2.4",
+    "pluralize": "^8.0.0",
     "protocol": "file:../protocol",
     "react": "^18.2.0",
     "react-async-hook": "^3.6.2",
     "react-beautiful-dnd": "^13.1.1",
+    "react-d3-tree": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-slot-component": "^2.0.3",
     "react-use": "^17.4.0",
@@ -50,8 +52,6 @@
     "url-parse": "^1.5.3",
     "vite": "^4.2.2",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.33.0",
-    "vitest-canvas-mock": "^0.3.2",
     "web-vitals": "^1.1.2",
     "worker-loader": "^3.0.8"
   },
@@ -74,16 +74,24 @@
   },
   "devDependencies": {
     "@simbathesailor/use-what-changed": "^2.0.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/deep-diff": "^1.0.2",
     "@types/downloadjs": "^1.4.2",
     "@types/lodash": "^4.14.172",
     "@types/md5": "^2.3.1",
     "@types/memoizee": "^0.4.6",
+    "@types/pluralize": "^0.0.30",
     "@types/react": "^18.2.14",
     "@types/react-beautiful-dnd": "^13.1.4",
-    "@types/react-dom": "^17.0.9",
+    "@types/react-dom": "^18.2.7",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/url-parse": "^1.4.5",
-    "jsdom": "^22.1.0"
+    "@vitejs/plugin-react": "^3.1.0",
+    "jsdom": "^22.1.0",
+    "vitest": "^0.33.0",
+    "vitest-canvas-mock": "^0.3.2"
   },
   "homepage": "."
 }
