--- a/protocol/package.json
+++ b/protocol/package.json
@@ -1,8 +1,8 @@
 {
   "name": "protocol",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
