--- a/internal-renderers/package.json
+++ b/internal-renderers/package.json
@@ -1,8 +1,8 @@
 {
   "name": "internal-renderers",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "vitest",
     "storybook": "storybook dev -p 6006",
