--- a/adapter-warthog-wasm/package.json
+++ b/adapter-warthog-wasm/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "vite",
     "test": "jest",
-    "build": "vite build"
+    "build": "vite build",
+    "publish": "gh-pages -d ./dist -b adapter-warthog-wasm-dist"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "@types/lodash-es": "^4.17.5",
     "@types/lru-cache": "^5.1.1",
     "@types/md5": "^2.3.1",
+    "gh-pages": "^6.0.0",
     "vite": "^4.4.9",
     "vite-tsconfig-paths": "^4.2.1"
   }
