--- a/client/src/manifest.json
+++ b/client/src/manifest.json
@@ -2,7 +2,7 @@
   "short_name": "Visualiser",
   "name": "Visualiser",
   "version":"1.0.4",
-  "version_name":"1.0.4; late September 2023",
+  "version_name":"1.0.4; mid October 2023",
   "icons": [
     {
       "src": "favicon.png",
