Drag and drop workspaces

--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-d3-tree": "^3.6.1",
     "react-dom": "^18.2.0",
+    "react-file-drop": "^3.1.6",
     "react-slot-component": "^2.0.3",
     "react-use": "^17.4.0",
     "react-virtualized-auto-sizer": "^1.0.20",
