--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,11 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/lab": "^5.0.0-alpha.146",
     "@mui/material": "^5.14.11",
-    "@uidotdev/usehooks": "^2.3.1",
     "css-element-queries": "^1.2.3",
     "downloadjs": "^1.4.7",
     "file-select-dialog": "^1.5.4",
     "internal-renderers": "file:../internal-renderers",
+    "js-yaml": "^4.1.0",
     "json-beautify": "^1.1.1",
     "json-rpc-2.0": "^1.6.0",
     "lodash": "^4.17.21",
@@ -71,6 +71,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/downloadjs": "^1.4.4",
+    "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.14.199",
     "@types/md5": "^2.3.3",
     "@types/memoizee": "^0.4.9",
