--- a/adapter-fs-bridge/package.json
+++ b/adapter-fs-bridge/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adapter-pipe",
+  "name": "adapter-fs-bridge",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,13 +14,20 @@
   "dependencies": {
     "boxen": "^7.1.1",
     "chalk": "^5.3.0",
+    "chokidar": "^3.5.3",
     "express": "^4.17.1",
+    "glob-promise": "^6.0.5",
+    "js-yaml": "^4.1.0",
     "json-rpc-2.0": "^0.2.18",
     "lodash": "^4.17.21",
     "lru-cache": "^6.0.0",
     "md5": "^2.3.0",
+    "memoizee": "^0.4.15",
     "node-emoji": "^2.1.0",
     "protocol": "file:../protocol",
+    "push-code-generator": "file:../push-code-generator",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
     "vite-node": "^0.34.4",
     "vite-tsconfig-paths": "^4.2.1",
     "yaml": "^2.3.2",
@@ -28,8 +35,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.14.202",
     "@types/lru-cache": "^5.1.1",
-    "@types/md5": "^2.3.1"
+    "@types/md5": "^2.3.1",
+    "@types/memoizee": "^0.4.11",
+    "@types/socket.io-client": "^3.0.0"
   }
 }
