Minor UI tweaks

--- a/adapter-fs-bridge/adapter.config.yaml
+++ b/adapter-fs-bridge/adapter.config.yaml
@@ -2,4 +2,4 @@ name: Filesystem Sync
 version: 1.0.5
 description: Sync search traces
 port: 8224
-path: ~/projects/path-visualiser/app/resources/traces/v1.0.5
+path: ../resources/traces/v1.0.5a
