Facilitate sync using bidirectional comms

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "color-interpolate": "^1.0.5",
     "css-element-queries": "^1.2.3",
     "downloadjs": "^1.4.7",
+    "eventemitter3": "^5.0.1",
     "file-select-dialog": "^1.5.4",
     "internal-renderers": "file:../internal-renderers",
     "js-yaml": "^4.1.0",
@@ -44,6 +45,7 @@
     "renderer": "file:../renderer",
     "socket.io-client": "^4.7.2",
     "string-template-parser": "^1.2.6",
+    "typed-emitter": "^2.1.0",
     "typescript": "^5.2.2",
     "unique-username-generator": "^1.2.0",
     "url-parse": "^1.5.3",
