--- a/adapter-fs-bridge/package.json
+++ b/adapter-fs-bridge/package.json
@@ -15,6 +15,7 @@
     "boxen": "^7.1.1",
     "chalk": "^5.3.0",
     "chokidar": "^3.5.3",
+    "eventemitter3": "^5.0.1",
     "express": "^4.17.1",
     "glob-promise": "^6.0.5",
     "js-yaml": "^4.1.0",
@@ -28,6 +29,7 @@
     "push-code-generator": "file:../push-code-generator",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
+    "typed-emitter": "^2.1.0",
     "vite-node": "^0.34.4",
     "vite-tsconfig-paths": "^4.2.1",
     "yaml": "^2.3.2",
