WIP: d192777 Merge branch 'feature-pipe-adapter'

--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "memoizee": "^0.4.15",
     "monaco-editor": "^0.43.0",
     "nanoid": "^5.0.1",
+    "nearest-pantone": "^1.0.1",
     "overlayscrollbars": "^2.3.2",
     "overlayscrollbars-react": "^0.5.2",
     "performant-array-to-tree": "^1.11.0",
@@ -35,6 +36,7 @@
     "react": "^18.2.0",
     "react-async-hook": "^4.0.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-colorful": "^5.6.1",
     "react-d3-tree": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-file-drop": "^3.1.6",
