Add explore page

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "eventemitter3": "^5.0.1",
     "file-select-dialog": "^1.5.4",
     "internal-renderers": "file:../internal-renderers",
+    "jimp": "^0.22.10",
     "js-yaml": "^4.1.0",
     "json-beautify": "^1.1.1",
     "json-rpc-2.0": "^1.6.0",
@@ -27,10 +28,12 @@
     "monaco-editor": "^0.43.0",
     "nanoid": "^5.0.1",
     "nearest-pantone": "^1.0.1",
+    "object-sizeof": "^2.6.4",
     "overlayscrollbars": "^2.3.2",
     "overlayscrollbars-react": "^0.5.2",
     "performant-array-to-tree": "^1.11.0",
     "pluralize": "^8.0.0",
+    "promise-tools": "^2.1.0",
     "protocol": "file:../protocol",
     "push-code-generator": "file:../push-code-generator",
     "react": "^18.2.0",
