--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -1,11 +1,12 @@
 {
   "short_name": "Visualiser",
   "name": "Visualiser",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Visualise pathfinding search and more",
-  "version_name": "1.1.4; early February 2024",
+  "version_name": "1.1.5; mid February 2024",
   "repository": "https://github.com/path-visualiser/app",
   "docs": "https://github.com/path-visualiser/app/blob/master/docs",
+  "homepage": "https://path-visualiser.github.io/",
   "icons": [
     {
       "src": "./favicon.png",
