--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,10 @@
   "private": true,
   "dependencies": {
     "@devbookhq/splitter": "^1.4.2",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@monaco-editor/react": "^4.5.2",
-    "@mui/icons-material": "^5.14.11",
+    "@mui/icons-material": "^5.15.10",
     "@mui/lab": "^5.0.0-alpha.146",
-    "@mui/material": "^5.14.11",
+    "@mui/material": "^5.15.10",
     "capture-console-logs": "^2.0.1-rc.1",
     "color-interpolate": "^1.0.5",
     "css-element-queries": "^1.2.3",
@@ -101,6 +99,10 @@
     "jsdom": "^22.1.0",
     "vitest": "^0.34.6",
     "vitest-canvas-mock": "^0.3.3"
+  },
+  "peerDependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0"
   },
   "homepage": ".",
   "main": "main.js"
