--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-colorful": "^5.6.1",
     "react-d3-tree": "^3.6.1",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-file-drop": "^3.1.6",
     "react-slot-component": "^2.0.3",
     "react-use": "^17.4.0",
